fix spacing for prototypes

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -108,19 +108,19 @@
   position: absolute
   top: 200px
   width: 1000px
-  height: 700px
+  height: 650px
   padding: 0
 
 .box2
   position: absolute
-  top: 1000px
+  top: 900px
   width: 1000px
-  height: 700px
+  height: 650px
   padding: 0
 
 .box-row1
   position: absolute
-  top: 25px
+  top: 0
   left: 0
   width: 1000px
   height: 300px
@@ -128,7 +128,7 @@
 
 .box-row2
   position: absolute
-  top: 350px
+  top: 325px
   left: 0
   width: 1000px
   height: 300px
@@ -138,29 +138,29 @@
   position: absolute
   top: 0
   left: 0
-  width: 450px
-  height: 225px
+  width: 600px
+  height: 300px
 
 .box-row1-text
   position: absolute
   top: 0
-  right: 0
-  width: 525px
-  height: 225px
+  left: 620
+  width: 380px
+  height: 300px
 
 .box-row2-image
   position: absolute
   top: 0
   right: 0
-  width: 450px
-  height: 225px
+  width: 600px
+  height: 300px
 
 .box-row2-text
   position: absolute
   top: 0
-  left: 0
-  width: 525px
-  height: 225x
+  left: 620
+  width: 380px
+  height: 300x
 
 
 
